--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,7 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+autopep8 = "*"
 
 [packages]
 agate = "==1.6.1"
@@ -35,6 +36,7 @@ pg8000 = "*"
 pyexcel = "*"
 cement = "*"
 prompt-toolkit = "*"
+urllib3 = "*"
 
 [requires]
 python_version = "3.7"
