--- a/example_config.ini
+++ b/example_config.ini
@@ -1,5 +1,5 @@
 [DB]
-DB_USER=documented
-DB_HOST=178.128.148.91
-DB_NAME=documented
-DB_PASSWORD=d0c_um3n!
+DB_USER=
+DB_HOST=
+DB_NAME=
+DB_PASSWORD=
